fix bug with map for user login response